add style sheet

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <link rel="icon" href="https://cdn130.picsart.com/296621660023201.jpg?c256x256" type="image/gif" sizes="16x16">
         <title>"Weird Al" Tribute Page</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
         <style>
             table {
               font-family: arial, sans-serif;
@@ -23,7 +24,9 @@
         </style>      
     </head>
     <body>
-        <h1 style="text-align:center;">Just a "Weird" Stalker Page</h1>
+        <header>
+            <h1>Just a "Weird" Stalker Page</h1>
+        </header>
         <br>
         <img src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fspecials-images.forbesimg.com%2Fdam%2Fimageserve%2F1128758452%2F960x0.jpg%3Ffit%3Dscale" alt="Is this food?">
         <br>
