making the css wierd

--- a/index.html
+++ b/index.html
@@ -27,14 +27,22 @@
         <header>
             <h1>Just a "Weird" Stalker Page</h1>
         </header>
-        <br>
+        <section>
+        <div id="container_1">
         <img src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fspecials-images.forbesimg.com%2Fdam%2Fimageserve%2F1128758452%2F960x0.jpg%3Ffit%3Dscale" alt="Is this food?">
+        </div>
+        <p>See that guy to the left? He is one of the funniest people out there.  Now I don't want to say that I am obsessed with him, but he's pretty great, and I'm definitely not keeping constant tabs on his life or current whereabouts.  His musicianship, combined with his wit, makes him an ideal candidate for stalking... I mean... having fans.</p>
         <br>
-        <p>That guy up above, is one of the funniest people out there.  Now I don't want to say that I am obsessed with him, but he's pretty great, and I'm definitely not keeping constant tabs on his life or current whereabouts.  His musicianship, combined with his wit, makes him an ideal candidate for stalking... I mean... having fans.</p>
+        <p>Plus, did you even look at that picture? Have you ever seen hair like that?  It's like a mop affixed to the face of a Grecian God. Luxurious and curly brown locks of pure masculinity.</p>
         <br>
+        <p>""... I'm literally drooling."  Is probably what you're thinking... perv.</p>
+        </section>
+        <section>
+        <div id="container_2">
         <img src="https://www.sanluisobispo.com/entertainment/music-news-reviews/8ja47j/picture226124845/alternates/FREE_1140/AP19041782439176.jpg" alt="... Probably not.">
+        </div>
         <br>
-        <h2>So, why do I <s>dream about</s> like "Weird Al" anyway?</h2>
+        <h3 class="padding">So, why do I <s>dream about</s> like "Weird Al" anyway?</h3>
         <br>
         <ul>
             <li>He is fuzzy?</li>
@@ -43,16 +51,15 @@
             <li>He is a smart and funny person who seems down to earth and this probably could have been split into multiple bullet points.</li>
             <li>Minimal home security system and a consistent schedule.</li>
         </ul>
-
+        </section>
         <br>
 
         <h2>Some actual facts about "Weird Al".</h2>
-        <br>
         <p>Alfred Matthew "Weird Al" Yankovic was born October 23, 1959)[2] is an American singer-songwriter, record producer, satirist, actor, voice actor, music video director, comedian, and author. He is known for his humorous songs that make light of popular culture and often parody specific songs by contemporary musical acts; original songs that are style pastiches of the work of other acts; and polka medleys of several popular songs, featuring his favored instrument, the accordion.</p>
         <br>
-        <p>All of the above information can be found, near verbatim, at:</p>
+        <p class="center">All of the above information can be found, near verbatim, at:
         <a href="https://en.wikipedia.org/wiki/%22Weird_Al%22_Yankovic" target="_blank"> The Ultimate "Weird Al" Stalker Page.</a>
-        <br>
+        </p>
         <h2><s>Less Important People</s></h2>
         <br>
         <table>
@@ -86,6 +93,8 @@
         <br>
         <h2>My Favorite Song:</h2>
         <br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/r_U377vst5o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div id=container_3>
+        <iframe src="https://www.youtube.com/embed/r_U377vst5o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </body>
 </html>
